# c-sdl-project-skeleton

./: .gitignore  CMakeLists.txt  README.md  c-sdl-project-skeleton  test.sh
src/: app.c
src/sdl-helper/: CMakeLists.txt
src/sdl-helper/application-manager/: CMakeLists.txt
src/sdl-helper/application-manager/headers/: application.h  structs.h
src/sdl-helper/application-manager/src/: application.c
src/sdl-helper/component-manager/: CMakeLists.txt
src/sdl-helper/component-manager/headers/: component-creator.h  component.h  structs.h
src/sdl-helper/component-manager/src/: component-creator.c  component.c
src/sdl-helper/config/: CMakeLists.txt
src/sdl-helper/config/headers/: config.h  window-config.h
src/sdl-helper/config/src/: config.c  window-config.c
src/sdl-helper/util/: CMakeLists.txt
src/sdl-helper/util/headers/: free.h  structs.h
src/sdl-helper/util/src/: free.c
src/sdl-helper/window-manager/: CMakeLists.txt
src/sdl-helper/window-manager/headers/: structs.h  window-component-manager.h  window.h
src/sdl-helper/window-manager/src/: window-component-manager.c  window.c
